introducing communication between components, so running a new comparison doesn't require refreshing page; some code refinement done

--- a/UI/src/app/pages/comparison/comparison.component.html
+++ b/UI/src/app/pages/comparison/comparison.component.html
@@ -14,9 +14,9 @@
     p-xl-8 p-xl-offset-2">
 
   <!--   validations selection   -->
-    <qa-validation-selector (emitComparisonInput)="provideConfiguration($event)"></qa-validation-selector>
+    <qa-validation-selector></qa-validation-selector>
   <!--  table section  -->
-    <qa-table-comparison [comparisonModel]="selectedComparisonConfiguration"></qa-table-comparison>
+    <qa-table-comparison></qa-table-comparison>
   <!--  plots section  -->
     <qa-plots [comparisonModel]="selectedComparisonConfiguration"></qa-plots>
   </div>
