dynamic communication added to plots component, some code refinement done.

--- a/UI/src/app/pages/comparison/comparison.component.html
+++ b/UI/src/app/pages/comparison/comparison.component.html
@@ -18,6 +18,6 @@
   <!--  table section  -->
     <qa-table-comparison></qa-table-comparison>
   <!--  plots section  -->
-    <qa-plots [comparisonModel]="selectedComparisonConfiguration"></qa-plots>
+    <qa-plots></qa-plots>
   </div>
 </div>
