--- a/UI/src/app/modules/user/user-form/user-form.component.scss
+++ b/UI/src/app/modules/user/user-form/user-form.component.scss
@@ -8,6 +8,7 @@
 .form-field{
   width: 15rem;
   height: 2.5rem;
+  margin-right: 0.5rem;
 }
 .p-float-label{
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
