--- a/UI/src/app/pages/home/home.component.html
+++ b/UI/src/app/pages/home/home.component.html
@@ -1,4 +1,5 @@
-<div *ngIf="carousel_images$|async as images" class="p-grid">
+<div class="p-grid">
+<!--<div *ngIf="carouselImages$|async as images" class="p-grid">-->
   <div class="p-col-12">
 
     <div class="carousel-desc centered" style="top: 17rem">
@@ -11,10 +12,13 @@
       </div>
 
     </div>
-    <p-carousel [value]="getListOfPlots(images)" [circular]="true" [autoplayInterval]="5000">
+    <p-carousel [value]="imagesModel" [circular]="true" [autoplayInterval]="5000">
       <ng-template let-image pTemplate="item">
-        <img class="carousel-img"  style="max-width:100%;max-height:100%;" [src]="image" />
-<!--        <p>{{ image.reference }}</p>-->
+        <img *ngIf="(image.plot|async) as plot"
+             class="carousel-img"
+             style="max-width:100%;max-height:100%;"
+             [src]="getSanitizedPlot(plot.plot)" />
+        <p>{{ image.description }}</p>
       </ng-template>
     </p-carousel>
   </div>
