account deactivation added

--- a/UI/src/app/modules/user/user-form/user-form.component.html
+++ b/UI/src/app/modules/user/user-form/user-form.component.html
@@ -99,7 +99,13 @@
 
     </form>
     <p>
-      <button *ngIf="userData" pButton type="button" label="Deactivate my account" class="p-button-danger"></button>
+      <button *ngIf="userData"
+              pButton
+              type="button"
+              label="Deactivate my account"
+              (click)="deactivateAccount()"
+              class="p-button-danger">
+      </button>
     </p>
   </div>
 </div>
