--- a/UI/src/app/pages/home/home.component.html
+++ b/UI/src/app/pages/home/home.component.html
@@ -1,91 +1,104 @@
-<div *ngIf="carousel_images$|async as images" class="p-grid">
-  <div class="p-col-12">
 
-    <div class="carousel-desc centered" style="top: 17rem">
-      <div class="carousel-box">
-        <h1>Quality Assurance for Soil Moisture</h1>
-        <h3 class="carousel-desc">
-          Validation of satellite soil moisture products <br/>
-          against in-situ and model reference data
-        </h3>
+<main role="main">
+  <div *ngIf="carousel_images$|async as images" class="p-grid">
+    <div class="p-col-12 carousel slide">
+        <div class="carousel-caption">
+          <div class="text">
+            <h1>Quality Assurance for Soil Moisture</h1>
+            <h3 class="carousel-desc d-none d-sm-block">
+              Validation of satellite soil moisture products <br/>
+              against in-situ and model reference data
+            </h3>
+        </div>
       </div>
-
-    </div>
-    <p-carousel [value]="getListOfPlots(images)" [circular]="true" [autoplayInterval]="5000">
-      <ng-template let-image pTemplate="item">
-        <img class="carousel-img"  style="max-width:100%;max-height:100%;" [src]="image" />
-<!--        <p>{{ image.reference }}</p>-->
-      </ng-template>
-    </p-carousel>
-  </div>
-</div>
-
-
-<hr class="featurette-divider">
-
-<div class="p-grid p-justify-center">
-  <div class="p-col-fixed p-md-4" style="width:50rem">
-    <h3 class="featurette-heading">Overview <span class="text-muted">QA4SM</span></h3>
-    The Quality Assurance for Soil Moisture (<b>QA4SM</b>) service provides the user with:
-    <ul class="list">
-      <li>An easy-to-use interface for comparing satellite soil moisture data against land surface models and the <a href="https://ismn.geo.tuwien.ac.at/">international soil moisture network</a></li>
-      <li>A traceble and consistent methodology for all comparisons</li>
-      <li>Various filtering and scaling options to assess the impact of these on the validation results</li>
-      <li>Traceable validation results in netCDF format and as visualisations (graphs and maps)</li>
-    </ul>
-    The overall aim is to <b>bring together methodologies and protocols</b> used for the validation and quality control of soil moisture data products and provider users with <b>traceable validation results</b>.
-    <p>QA4SM is supported by the <a href="https://www.ffg.at/en">Austrian Space Application Programme</a>.</p>
-  </div>
-
-  <div *ngIf="settings$|async as settings"   class="p-col-fixed p-md-4" style="width:50rem">
-    <div class="card news">
-      <div class="card-body">
-        <h5 class="card-title">News</h5>
-        <div [innerHTML]=settings[0].news></div>
-      </div>
-    </div>
-    <img class="scaled_image" src="assets/home_images/qa4am_overview_diagram.png" />
-  </div>
-
-</div>
-
-<hr class="featurette-divider">
-
-<div class="p-grid p-justify-center">
-  <div class="card-deck p-col-fixed" style="width:100rem">
-    <div class="card">
-      <div class="card-body">
-        <h4 class="text-center mt-0">Datasets and Settings</h4>
-        <p class="text-muted text-center" style="min-height: 3rem;">Allows specification of input datasets and settings for your validation</p>
-        <img class="scaled_image img-screen" id="serviceScreenshot1" alt="Validate" src="assets/home_images/validate.png" />
-      </div>
-    </div>
-
-    <div class="card">
-      <div class="card-body">
-        <h4 class="text-center mt-0">Results</h4>
-        <p class="text-muted text-center" style="min-height: 3rem;">Provides a list of all validation results</p>
-        <img class="scaled_image img-screen" id="serviceScreenshot2" alt="Results" src="assets/home_images/validation_result_list.png"  />
-
-      </div>
-    </div>
-
-    <div class="card">
-      <div class="card-body">
-        <h4 class="text-center mt-0">Download and Visualize</h4>
-        <p class="text-muted text-center" style="min-height: 3rem;">Allows download of validation results in netCDF format and as graphics</p>
-        <img class="scaled_image img-screen" id="serviceScreenshot3" alt="Download and Visualise" src="assets/home_images/validation_result_details.png" />
-      </div>
+  <!--    value is Sanitized SafeUrl[], src is one url -->
+      <p-carousel [value]="getListOfPlots(images)" [circular]="true" [autoplayInterval]="5000" [numVisible]="1">
+        <ng-template let-image pTemplate="item">
+          <img class="carousel-img active"[src]="image"/>
+  <!--         <p>{{ image.reference }}</p>-->
+        </ng-template>
+      </p-carousel>
     </div>
   </div>
-</div>
 
-<div class="p-grid p-justify-center">
-  <div class="card-deck p-col-fixed" style="width:100rem">
-    <a pageScroll [pageScrollDuration]="1" href="#top">Back to top</a>
+
+  <hr class="featurette-divider">
+
+  <div class="container-marketing">
+    <div class="p-grid">
+      <div class="p-md-7">
+        <h3 class="featurette-heading">Overview <span class="text-muted">QA4SM</span></h3>
+        The Quality Assurance for Soil Moisture (<b>QA4SM</b>) service provides the user with:
+        <ul class="list">
+          <li>An easy-to-use interface for comparing satellite soil moisture data against land surface models and the <a href="https://ismn.geo.tuwien.ac.at/">international soil moisture network</a></li>
+          <li>A traceble and consistent methodology for all comparisons</li>
+          <li>Various filtering and scaling options to assess the impact of these on the validation results</li>
+          <li>Traceable validation results in netCDF format and as visualisations (graphs and maps)</li>
+        </ul>
+        The overall aim is to <b>bring together methodologies and protocols</b> used for the validation and quality control of soil moisture data products and provider users with <b>traceable validation results</b>.
+        <p>QA4SM is supported by the <a href="https://www.ffg.at/en">Austrian Space Application Programme</a>.</p>
+        <img class="scaled_image" src="assets/home_images/qa4am_overview_diagram.png" id="workflow" alt="QA4SM Workflow" style="max-width: 80%"/>
+      </div>
+
+      <div class="p-md-5">
+        <div *ngIf="logos$|async as logos "class="overflow">
+          <div *ngFor="let logo of getListOfPlots(logos)">
+            <a href="https://qa4sm.eu"><img [src]="logo"> </a>
+          </div>
+        </div>
+        <div *ngIf="settings$|async as settings">
+          <div class="card news card-body">
+              <h5 class="card-title">News</h5>
+              <div [innerHTML]=settings[0].news></div>
+          </div>
+        </div>
+      </div>
+
   </div>
-</div>
 
+
+  <hr class="featurette-divider">
+
+  <div class="p-grid p-justify-center">
+    <div class="card-deck">
+      <div class="card">
+        <div class="card-body">
+          <h4 class="text-center mt-0">Datasets and Settings</h4>
+          <p class="text-muted text-center" style="min-height: 3rem;">Allows specification of input datasets and settings for your validation</p>
+          <img class="scaled_image img-screen" id="serviceScreenshot1" alt="Validate" src="assets/home_images/validate.png"/>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="card-body">
+          <h4 class="text-center mt-0">Results</h4>
+          <p class="text-muted text-center" style="min-height: 3rem;">Provides a list of all validation results</p>
+          <img class="scaled_image img-screen" id="serviceScreenshot2" alt="Results" src="assets/home_images/validation_result_list.png"/>
+
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="card-body">
+          <h4 class="text-center mt-0">Download and Visualize</h4>
+          <p class="text-muted text-center" style="min-height: 3rem;">Allows download of validation results in netCDF format and as graphics</p>
+          <img class="scaled_image img-screen" id="serviceScreenshot3" alt="Download and Visualise" src="assets/home_images/validation_result_list.png"/>
+        </div>
+      </div>
+    </div>
+    <div id="modalOverlay" class="modal">
+      <!-- The Close Button -->
+      <span class="modalClose">&times;</span>
+      <!-- Modal Content (The Image) -->
+      <img class="modal-content" id="modalImg">
+      <!-- Modal Caption (Image Text) -->
+      <div id="caption"></div>
+    </div>
+  </div>
+  </div>
+</main>
+
+<qa-scroll-to-top></qa-scroll-to-top>
 
 
 
