Add button to scroll up to all pages

--- a/UI/src/app/pages/about/about.component.html
+++ b/UI/src/app/pages/about/about.component.html
@@ -53,5 +53,6 @@
         QA4SM is open source software, licensed under an MIT license. <a href="https://github.com/awst-austria/qa4sm" target="_blank">It is available on GitHub.</a>
         This site uses <a class="font-weight-bold" href="https://github.com/awst-austria/qa4sm/releases/tag/v{{this.getAppVersion()}}" target="_blank">version {{this.getAppVersion()}}</a>.
     </p>
-
+<qa-scroll-to-top></qa-scroll-to-top>
 </div>
+
