--- a/UI/src/app/pages/help/help.component.html
+++ b/UI/src/app/pages/help/help.component.html
@@ -353,7 +353,6 @@
     </p>
 
     <p class="mt-5">If you want to email us to send comments, report errors, or ask questions, you can do so at {{ this.getAdminMail() }}.</p>
-
-    <a pageScroll [pageScrollDuration]="1" href="#top">Back to top</a>
-
+<qa-scroll-to-top></qa-scroll-to-top>
 </div>
+
